# ai-agent-sdk-rust

./: .gitignore  README.md
attps-rust-sdk/: Cargo.toml
attps-rust-sdk/src/: lib.rs
attps-rust-sdk/src/abi/: AgentFactory.json  AgentManager.json  AgentProxy.json
attps-rust-sdk/src/core/: consts.rs  mod.rs
attps-rust-sdk/src/svc/: agent_factory_node.rs  agent_manager_node.rs  agent_proxy_node.rs  mod.rs
attps-rust-sdk/src/utils/: common.rs
demo/: .env.example  Cargo.toml
demo/src/: main.rs
doc/: AgentFactory.md  AgentManager.md  AgentProxy.md
