[package]
name = "attps-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "default-tls"] }
once_cell = "1.19.0"
dotenvy = "0.15"
hex = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "attps_rust_sdk"
path = "src/lib.rs"
