[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
attps-rust-sdk = { path = "../attps-rust-sdk" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
hex = "0.4"
